# playground-jax

./: .gitignore  README.md  setup.cfg
notebooks/: autodiff_1_real_functions.ipynb  autodiff_2_real-valued_functions.ipynb  autodiff_2_real_valued_functions.ipynb  autodiff_3_vector_valued_functions.ipynb  autodiff_4_parametrized_layer.ipynb  autograd_4_parametrized_real-valued_functions.ipynb  autograd_4_parametrized_vector-valued_functions.ipynb  fitting_1d_real-valued function (with Gaussian Ansatz).ipynb  fitting_1d_real-valued function (without a model).ipynb  fitting_1d_real-valued function.ipynb  fitting_1d_real_valued_function_equinox.ipynb  fitting_1d_real_valued_function_flax.ipynb  fitting_2d_real-valued_function_rescaling (todo).ipynb  fitting_2d_real_valued_function_flax.ipynb  test models.ipynb  testing Equivariant MLPs.ipynb  testing jit basics.ipynb  testing jit loops and conditions.ipynb  testing lax.ipynb  testing model parameters pytrees (equinox).ipynb  testing model parameters pytrees (flax).ipynb  testing vmap.ipynb  testing_sampling_fht.ipynb  testing_sampling_finite.ipynb  testing_sgd_sampled_loss_fht.ipynb  testing_sgd_sampled_loss_finite.ipynb
notebooks/jax/: autodiff_1_real_functions.ipynb  autodiff_2_real-valued_functions.ipynb  autodiff_3_vector_valued_functions.ipynb  fitting_1d_real-valued function (using Equinox).ipynb  fitting_1d_real-valued function (without a model).ipynb  fitting_1d_real-valued function.ipynb  fitting_2d_real-valued_function.ipynb  testing sampling (fht).ipynb  testing sampling (finite time horizon).ipynb  (+2 more)
(+8 files in other folders)
