[metadata]
name = playground-jax
author = Enric Ribera Borrell 
author_email = ribera.borrell@fu-berlin.de
description = Playground for the jax package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riberaborrell/playground-jax
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
zip_safe = False
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    jax
    jaxlib
    jaxopt
    equinox
    matplotlib
    jupyterlab
    numpy
    optax
    pytest

[options.extras_require]
test = pytest

[options.packages.find]
where = src
